# api/openapi/v2.json
@@ -6442,6 +6442,10 @@
             "required": false,
             "schema": {
               "default": "track",
+              "enum": [
+                "track",
+                "album"
+              ],
               "title": "Type",
               "type": "string"
             }
